syntax = "proto3";
import "common_types.proto";

message ReplyRequest {
    string access_token = 1;
    int32 reply_boxID=2;
    string reply = 3;
    bool anonym = 4;
}

service DownvoteReply {
    rpc DownvoteReply (AuthenticatedObjectRequest) returns ();
}

service UpvoteReply {
    rpc UpvoteReply (AuthenticatedObjectRequest) returns ();
}


service SubmitReply {
    rpc SubmitReply (AuthenticatedObjectRequest) returns ();
}

message GetRepliesRequest {
    string access_token = 1;
    int32 reply_boxID=2;
    enum Sort {
        LATEST = 0;
        POPULAR = 1;
      }
    Sort sort = 3;
    int32 offset = 4;
}
}

service GetReplies {
    rpc GetReplies (GetRepliesRequest) returns (ReplyList);
}

