syntax = "proto3";
import "common_types.proto";

message UserInformations {
    string username=1;
    
    int32 date_of_birth=3;  



    Genre genre = 4;
    string country_code = 5;


}

message UserInformationsResponse{
    int32 last_modification=1;
    UserInformations user_informations=2;

}

service getInformations {
    rpc getInformations(AuthenticatedRequest) returns (UserInformationsResponse);
}

service changeInformations {
    rpc changeInformations(UserInformations) returns ();
}

