syntax = "proto3";
import "common_types.proto";

message UserAssetsRequest {
    string access_token = 1;
    int32 userID = 2;
    int32 offset = 3;
}

service ListUserConvs {
    rpc ListUserConvs (UserAssetsRequest) returns (ConvHeaderList);
}


service ListUserReplies {
    rpc ListUserReplies (UserAssetsRequest) returns (ReplyHeaderList);
}


service ListUserUpvotes {
    rpc ListUserUpvotes (UserAssetsRequest) returns (ConvHeaderList);
}

service ListUserDownvotes {
    rpc ListUserUpvotes (UserAssetsRequest) returns (ConvHeaderList);
}

message PersonalAssetsRequest {
    string access_token = 1;
    int32 offset = 3;
}

service ListInvitations {
    rpc ListInvitations(PersonalAssetsRequest) returns (ConvHeaderList);
}

message resourceRequest {
    string access_token = 1;
    int32 ID = 2;
}

service DeclineInvitation {
    rpc DeclineInvitation(resourceRequest) returns ();
}

service BlockUser {
    rpc BlockUser(resourceRequest) returns ();
}

service UnblockUser {
    rpc UnblockUser(resourceRequest) returns ();
}
