syntax = "proto3";

package v1;

import "protos/common_types.proto";
import "protos/conversation.proto";
import "protos/feed.proto";
import "protos/login.proto";
import "protos/notifications.proto";
import "protos/qa.proto";
import "protos/replies.proto";
import "protos/search.proto";
import "protos/settings.proto";
import "protos/user.proto";
import "protos/visibility.proto";
import "protos/report.proto";


service Api {
    rpc Login (login.LoginRequest) returns (login.LoginResponse) {

    }

    rpc RefreshToken(common_types.AuthenticatedRequest) returns (common_types.RefreshToken) {
     
    }
/*
    rpc Logout(common_types.AuthenticatedRequest) returns (common_types.Empty) {
        option (google.api.http) = {
            post: "/Logout"
            body: "*"
          };       
    }
    */



    rpc Feed (feed.FeedRequest) returns (conversation.ConvHeaderList) {

    }

    rpc Search (search.SearchRequest) returns (search.SearchResponse) {

    }

    rpc getInformations(common_types.AuthenticatedRequest) returns (settings.UserInformationsResponse) {

    }

    rpc changeInformations(settings.UserInformations) returns (common_types.Empty) {

    }

    //convid
    rpc DeclineInvitation(user.resourceRequest) returns (common_types.Empty) {

    }

    rpc BlockUser(user.blockRequest) returns (common_types.Empty) {

    }

    rpc UnblockUser(user.blockRequest) returns (common_types.Empty) {

    }

    rpc ListInvitations(user.PersonalAssetsRequest) returns (conversation.ConvHeaderList) {

    }

    rpc ListUserConvs (user.UserAssetsRequest) returns (conversation.ConvHeaderList) {

    }

    rpc ListUserReplies (user.UserAssetsRequest) returns (common_types.ReplyHeaderList) {

    }

    rpc ListUserUpvotes (user.UserAssetsRequest) returns (conversation.ConvHeaderList) {

    }

    rpc ListUserDownvotes (user.UserAssetsRequest) returns (conversation.ConvHeaderList) {

    }

    rpc GetConv (common_types.AuthenticatedObjectRequest) returns (visibility.Visibility) {

    }

    rpc ModifyVisibility (visibility.ModifyVisibilityRequest) returns (common_types.Empty) {

    }

    rpc UpvoteConv (common_types.AuthenticatedObjectRequest) returns (common_types.Empty) {

    }

    rpc DownvoteConv (common_types.AuthenticatedObjectRequest) returns (common_types.Empty) {

    }

    //with token or not
    rpc GetVisibility (common_types.AuthenticatedObjectRequest) returns (conversation.Conversation) {

    }


    rpc NewConv (conversation.NewConvRequest) returns (conversation.NewConvRequestResponse) {

    }

    rpc ModifyConv (conversation.Conversation) returns (common_types.Empty) {

    }

    rpc DownvoteReply (common_types.AuthenticatedObjectRequest) returns (common_types.Empty) {

    }

    rpc UpvoteReply (common_types.AuthenticatedObjectRequest) returns (common_types.Empty) {

    }

    rpc SubmitReply (replies.ReplyRequest) returns (common_types.Empty) {

    }

    rpc GetReplies (replies.GetRepliesRequest) returns (replies.ReplyList) {

    }

    //with token or not
    rpc GetQASpace (common_types.AuthenticatedObjectRequest) returns (qa.QASpace) {

    }

//for conv owner in edit mode
    rpc PreviewQASpace (common_types.AuthenticatedObjectRequest) returns (qa.QASpace) {

    }

    rpc EditQASpace (qa.EditQASpaceRequest) returns (common_types.Empty) {

    }

    rpc GetNotifications (notifications.GetNotificationsRequest) returns (notifications.NotificationsResponse) {

    }

    rpc UpdateWallet(common_types.AuthenticatedObjectRequest) returns (common_types.Empty) {

    }

    rpc DeleteAccount(common_types.AuthenticatedRequest) returns (common_types.Empty) {
     
    }

    rpc Feedback(user.FeedbackRequest) returns (common_types.Empty) {
     
    }

    rpc UploadFile(common_types.FileUploadRequest) returns (common_types.FileUploadResponse) {
  
    }

    rpc Report(common_types.AuthenticatedRequest) returns (common_types.Empty) {

    }

    rpc GetBalance(common_types.AuthenticatedRequest) returns (user.BalanceResponse) {

    }

    rpc BuyEmergency(common_types.AuthenticatedRequest) returns (common_types.Empty) {

    }

    rpc DeleteConv(common_types.AuthenticatedObjectRequest) returns (common_types.Empty) {

    }


    rpc DeleteReply(common_types.AuthenticatedObjectRequest) returns (common_types.Empty) {
 
    }
}
