syntax = "proto3";

//import "google/protobuf/timestamp.proto";

package common_types;


enum Guest {
    GUEST=0;
}

enum Genre {
    M = 0;
    F = 1;
    OTHER = 2;
  }

message ReplyHeader{
    int32 replyid=1;
    int32 convid=2;
    int32 reply_boxid=3;
    string reply=4;
    Votes votes=5;
}

message ReplyHeaderList {
    repeated ReplyHeader reply_header_list=1;
}

message Votes {
    int32 upvote = 1;
    int32 downvote = 2;
}

message Empty {

}




message AuthenticatedRequest {
    string access_token = 1;
}

message RefreshToken {
    string access_token = 1;
}

message AuthenticatedObjectRequest {
    string access_token = 1;
    int32 ID=2;

}

message FileUploadRequest {
    string access_token = 1;
    bytes file = 2;
}
message FileUploadResponse {
    string fileID = 1;
}