syntax = "proto3";

package feed;

enum FeedType {
  LAST_DAY = 0;
  LAST_WEEK = 1;
  LAST_MONTH = 2;
  LAST_YEAR = 3;
  ALL_TIME = 4;
  EMERGENCY = 5;
  LAST_ACTIVITY = 6;
}

message FeedRequest {
  //  string access_token = 1;



    FeedType feed_type = 1;

    int32 offset = 2;
}

