syntax = "proto3";

package user;

import "protos/common_types.proto";

enum Me {
    ME = 0;
};


message UserList {
    repeated string pseudo=1;
}



message UserAssetsRequest {
    string access_token = 1;
    oneof user {
    string pseudo = 2;
    Me me = 3;
    };
    int32 offset = 4;
}



message PersonalAssetsRequest {
    string access_token = 1;
    int32 offset = 2;
}


message resourceRequest {
    string access_token = 1;
    int32 ID = 2;
}

message blockRequest {
    string access_token = 1;
    string pseudo = 2;
}


message FeedbackRequest {
    string access_token = 1;
    string feedback = 2;
}

message SetAccountRequest {
    string access_token = 1;
    string pseudo = 2;
    common_types.Genre genre = 3;
    //timestamp
    int32 date_of_birth = 4;
    //country code
    string country = 5;
}


message BalanceResponse {
    int32 balance=1;
}