syntax = "proto3";
import "protos/common_types.proto";

message Span {
    int32 binf=1;
    int32 bsup=2;
}

message InviteAction {
    int32 userID = 1;

    enum ActionType {
        INVITE = 0;
        UNINVITE = 1;
      }

    ActionType action_type = 2;
}

message Visibility {
    int32 convID = 1;
    bool anonym = 2;
    repeated InviteAction action = 3;
    
    Span age = 4;
    repeated string countries=5;
    Genre genre=6;

}

message ModifyVisibilityRequest {
    string access_token = 1;
    Visibility visibility = 2;
}


